drums show when played

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <audio id="audio">oh no audio doesn't workon your browser!</audio>
 
 <svg height="200" width="200">
-  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" />
+  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="0"/>
 </svg>
 <svg height="200" width="200">
-  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" />
+  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="1"/>
 </svg>
 <svg height="200" width="200">
-  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" />
+  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="2"/>
 </svg>
 <svg height="200" width="200">
-  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" />
+  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="3"/>
 </svg>
 <svg height="200" width="200">
-  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" />
+  <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="4"/>
 </svg>
 </body>
 
