--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
+
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://js.leapmotion.com/leap-0.6.4.js"></script>  
-<script src="https://js.leapmotion.com/leap-plugins-0.1.11.js"></script>
-<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src="https://js.leapmotion.com/leap-0.6.4.js"></script>  
+	<script src="https://js.leapmotion.com/leap-plugins-0.1.11.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<script src="app.js"></script>
 </head>
-
 
 <body>
 
 <h1>LeapDrum</h1>
-<audio id="audio">oh no audio doesn't workon your browser!</audio>
+<audio id="audio">merde audio doesn't work on your browser! use chrome</audio>
 
 <svg height="200" width="200">
   <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="0"/>
 </svg>
+
 <svg height="200" width="200">
   <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="1"/>
 </svg>
+
 <svg height="200" width="200">
   <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="2"/>
 </svg>
+
 <svg height="200" width="200">
   <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="3"/>
 </svg>
+
 <svg height="200" width="200">
   <circle cx="100" cy="100" r="100" stroke="black" stroke-width="1" fill="white" id="4"/>
 </svg>
+
 </body>
 
-
-
 <style>
-body {
-	background-color:#2980b9;
-	font-family: 'Raleway', sans-serif;
-	text-align: center;
-}
+	body {
+		background-color:#2980b9;
+		font-family: 'Raleway', sans-serif;
+		text-align: center;
+	}
 
-svg{
-	padding:23px;
-}
+	svg{
+		padding:23px;
+	}
 
-h1 {
-	font-weight: 200;
-	color:white;
-}
+	h1 {
+		padding:20px;
+		padding-bottom: 100px;
+		font-weight: 200;
+		color:white;
+	}
 
-audio{
-	display:none;
-}
+	audio{
+		display:none;
+	}
 </style>
